# NordicPulse

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
common/: Cargo.toml
common/src/: lib.rs
ingestor/: Cargo.toml
ingestor/src/: main.rs
migrations/: 001_init_hypertable.sql
mosquitto/data/: mosquitto.db
simulator/: Cargo.toml
simulator/src/: main.rs
web/: .gitignore  next.config.ts  package-lock.json  package.json
web/app/: Dashboard.tsx  actions.ts  globals.css  layout.tsx  page.tsx
web/components/charts/: EnergyChart.tsx
web/components/map/: DeviceMap.tsx
web/components/stats/: KPIGrid.tsx
web/lib/: db.ts
